<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageButton
        android:id="@+id/observation_click_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="Take Photo"
        android:src="@drawable/camera" />

    <Gallery
        android:id="@+id/observation_photo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:spacing="10dp"
        android:contentDescription="Observations" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/habitat_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/observation_habitat" />

        <Button
            android:id="@+id/group_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/observation_group" />
    </LinearLayout>

    <EditText
        android:id="@+id/observation_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/observation_name" />

    <EditText
        android:id="@+id/observation_date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:editable="false"
        android:hint="@string/observation_date" />

    <Button
        android:id="@+id/observation_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:text="@string/observation_submit" />

</LinearLayout>